/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.mycompany.lapr2_interfacegrafica.controller;

/**
 *
 * @author Tiago
 */
public class SetDayOfPaymentController {
    
}
