/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.mycompany.lapr2_interfacegrafica.ui;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.TextField;

/**
 *
 * @author Tiago
 */
public class SetDayOfPaymentUI {

    @FXML
    private Label lblSetDayofPayment;
    @FXML
    private Label lblDate;
    @FXML
    private Label lblTimeOfTheDay;
    @FXML
    private TextField txtDate;
    @FXML
    private TextField txtTimeOfTheDay;
    @FXML
    private Button btnConfirm;
    @FXML
    private Button btnCancel;

    @FXML
    private void btnConfirmAction(ActionEvent event) {
    }

    @FXML
    private void btnCancelAction(ActionEvent event) {
    }
    
}
