@startuml
skinparam classAttributeIconSize 0



class Platform {
  -String designacao
  +OrganizationRecord getOrganizationRecord()
}

class OrganizationRecord{
  +Organization getOrganizationByUserEmail(String email)
}


class SetDayOfPaymentController {
    +newPaymentDay(Date dayOfMonth, Date timeOfDay)
    +recordsDate()
}

class SetDayOfPaymentUI{
}

class Organization {
   +PaymentDay newPaymentDay(Date dayOfMonth, Date timeOfDay)
}

class PaymentDay{
   -Date dayOfMonth
   -Date timeOfDay
   +PaymentDay(dayOfMonth, timeOfDay)
}



SetDayOfPaymentUI ..> SetDayOfPaymentController

SetDayOfPaymentController ..> Platform
SetDayOfPaymentController ..> OrganizationRecord
SetDayOfPaymentController ..> Organization

Platform "1" -> "1" OrganizationRecord : has >

OrganizationRecord "1" -> "*" Organization : has >

Organization "1" *-- "1" PaymentDay : has >

@enduml


